--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,6 +10,8 @@
         <ul>
             <li><a href="/hello/noParam">Dis bonjour (MVC)</a></li>
             <li><a href="h2-console" target="_blank">Console d'administration de la base de données H2 (URL jdbc:h2:mem:testdb)</a></li>
+            <li><a href="/city/defaultView" >Gérer les villes <strong>(Travail demandé)</strong></a></li>
+            <li><a href="/country/vueCountry">Gérer les pays <strong>(Fait en plus)</strong></a></li>
         </ul>
     </body>
 </html>
